--- a/templates/info.html
+++ b/templates/info.html
@@ -56,7 +56,7 @@
                 <div class="formbg-inner padding-horizontal--48">
                     
                   <span class="padding-bottom--15">Enter the email id to send attachment</span><br>
-                  <form id="stripe-login" action = "/requests" methods = "POST">
+                  <form id="stripe-login" action = "/requests" methods = "GET">
                     <div class="field padding-bottom--24">
                       <label for="name">Name</label>
                       <input type="text" name="name">
